# servicenow-requests-lakehouse

./: .gitignore  README.md  databricks.yml  pyproject.toml
.github/workflows/: cicd-dev.yml  cicd-prod.yml  pr-validation.yml
resources/: medallion_pipeline.yml
src/: sample_notebook.ipynb
src/bronze/: autoloader_ingestion.py
src/gold/: aggregations.py
src/setup/: setup.py
src/silver/: cleaning.py  scd_type2.py
terraform/: databricks_trust_policy.json  glue.tf  iam.tf  main.tf  outputs.tf  s3.tf  variables.tf
