[project]
name = "servicenow-requests-lakehouse"
version = "0.0.1"
authors = [{ name = "aboutula.suresh@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    # Project dependencies
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "databricks-dlt",
    "databricks-connect>=15.4,<15.5",
    "ipykernel",
    "pyspark",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
