[project]
name = "servicenow-requests-lakehouse"
version = "0.0.1"
authors = [{ name = "aboutula.suresh@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "databricks-connect>=15.4,<15.5",
    "ipykernel",
    "pyspark",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120